@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999999_002';
+our $VERSION='0.9999999999';
 
 
 use 5.005;
